documentation/4.0/content/userguide/tools-config/tool_prop.md
---
title: "Tool property file"
date: 2019-02-23T17:19:24-05:00
draft: false
weight: 4
description: "How to customize WDT configuration parameters."
---


 You can configure or tune WebLogic Deploy Tooling tools using the tool property file. This property file is installed as `<weblogic-deploy>/lib/tool.properties`. To tune the WDT tool, you may change the value of any of the properties in this file. Another option is to configure the tool properties in a [Custom Configuration]({{% relref "/userguide/tools-config/custom_config.md" %}}) directory. For this option, create the `tool.properties` file in the `$WDT_CUSTOM_CONFIG` directory.

 If a property is removed from the file, or a property value is incorrectly formatted, a `WARNING` message is logged and an internal default value used instead of the missing or bad value.

 | Property                                   | Description                                                                                                                                                                                                                                                                                              |
 |--------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | `activate.timeout`                         | The number of milliseconds that WLST waits for the activation of configuration changes to complete. A value of -1 means the operation will not timeout.                                                                                                                                                  |
 | `archive.custom.folder.size.limit`         | The size limit for the replicable custom files archive folder `config/wlsdeploy/custom` above which extracting the folder will generate a warning (default is `1048576`, which is 1 MB).                                                                                                                 |
 | `connect.timeout`                          | The number of milliseconds that WLST waits for the online `connect` command to complete. A value of zero (0) means the operation will not timeout.                                                                                                                                                       |
 | `deploy.timeout`                           | The number of milliseconds that WLST waits for the undeployment process to complete. A value of zero (0) means the operation will not timeout.                                                                                                                                                           |
 | `disable.rcu.drop.schema`                  | Whether the RCU drop step should be skipped when running Create Domain with the `-run_rco` switch (default is `false`).                                                                                                                                                                                  |
 | `enable.create.domain.password.validation` | Whether Create Domain should try to validate user passwords using the SystemPasswordValidator settings in the model (default is `true`).                                                                                                                                                                 |
 | `merge.server.start.arguments`             | Whether to merge the `ServerStart` `Arguments` attribute when running the Update Domain Tool (default value is `true`).  Setting the value to false will trigger replacing instead of merging.                                                                                                           |
 | `redeploy.timeout`                         | The number of milliseconds that WLST waits for the redeployment process to complete. A value of zero (0) means the operation will not timeout.                                                                                                                                                           |
 | `set.server.groups.timeout`                | Specifies the amount of time the set server groups connection can be inactive before the connection times out.                                                                                                                                                                                           |
 | `ssh.private.key.default.file.name`        | The default file name of the SSH private key file (default is `id_rsa`).                                                                                                                                                                                                                                 |
 | `start.application.timeout`                | The number of milliseconds that WLST waits for the start application process to complete. A value of zero (0) means the operation will not timeout.                                                                                                                                                      |
 | `stop.application.timeout`                 | The number of milliseconds that WLST waits for the stop application process to complete. A value of zero (0) means the operation will not timeout.                                                                                                                                                       |
 | `store.discover.admin.credentials`         | When discovering security provider data, store the admin user and password passed to the Discover Domain tool in the model's `domainInfo` section's `AdminUserName` and `AdminPassword` attributes (default is `true`). The password will be encrypted using the WDT encryption passphrase.              |
 | `store.discovered.passwords.in.clear.text` | When discovering passwords using the Discover Domain tool, store the discovered passwords in clear text (rather than using WDT model encryption).  Setting this to `true` is not recommended and will result in clear text passwords in the log files and the model/variable files (default is `false`). |
 | `undeploy.timeout`                         | The number of milliseconds that WLST waits for the undeployment process to complete. A value of zero (0) means the operation will not timeout.                                                                                                                                                           |
 | `use.deprecation.exit.code`                | Whether deprecation messages should cause WDT tools to exit with a non-zero exit code (default is `false`).                                                                                                                                                                                              |
 | `use.server.version.for.online.operation`  | Whether to use the server's WebLogic Server version and patch level to initialize the aliases for WDT online operations (default is `true`).                                                                                                                                                             |
 | `use.ssh.compression`                      | Whether to use SSH compression for all SSH operations (default is `true`).                                                                                                                                                                                                                               |
 | `wlst.edit.lock.acquire.timeout`           | Specifies the amount of time in milliseconds the WLST online `startEdit` command will wait trying to acquire the edit lock before it times out.                                                                                                                                                          |
 | `wlst.edit.lock.exclusive`                 | Specifies whether the edit lock acquired by `startEdit` should be exclusive or shared (default is `shared`).                                                                                                                                                                                             |
 | `wlst.edit.lock.release.timeout`           | Specifies the amount of time in milliseconds the WLST online `startEdit` command will wait for the edit lock to be released before releasing it automatically.                                                                                                                                           |
 | `yaml.max.file.size`                       | The maximum size of the YAML model file that the WDT SnakeYAML parser will allow.  The default value of zero (0) uses the SnakeYAML default setting of `3145728` (i.e., 3 MB).                                                                                                                           |

 You can override the value of a single property using a Java System property with the name `wdt.config.<tool-property-name>`.
 For example, adding `-Dwdt.config.connect.timeout=5000` will set the effective `connect.timeout` property to 5000 milliseconds, regardless of what the value in the tool.properties file might be.  To pass
 one or more of these properties to a WDT shell script (e.g., `createDomain.sh`), simply set the WLSDEPLOY_PROPERTIES environment variable prior to calling the shell script.  For example:
 
```shell
WLSDEPLOY_PROPERTIES="-Dwdt.config.connect.timeout=5000 -Dwdt.config.disable.rcu.drop.schema=true"
export WLSDEPLOY_PROPERTIES
$WLSDEPLOY_HOME/bin/createDomain.sh ...
```
